made updates to the index.html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-"Hello World" 
+<!DOCTYPE html>
+<head>
+	<title>Developers In Vogue | Community Service Project</title>
+</head>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
