Added Community Service Demo Page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,121 @@
 <!DOCTYPE html>
 <head>
 	<title>Developers In Vogue | Community Service Project</title>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+   <div class="content-wrapper">
+   	   <div class="container">
+   	   	  <div class="col-md-10 col-md-offset-1">
+   	   	  	 <div class="inner-wrapper">
+   	   	  		 <div class="top-sect">
+   	   	  		 	<ul class="list-unstyled">
+   	   	  		 	    <li><h1>Developers In Vogue</h1></li>
+   	   	  		 	    <li><h4>#LetASisterKnow</li>
+   	   	  		 		<li>
+   	   	  		 			<a href="http://developersinvogue.org" target="_blank">
+   	   	  		 				<button class="btn btn-default btn-lg">Visit Our Website</button>
+   	   	  		 			</a>
+   	   	  		 		</li>
+   	   	  		 	</ul>
+   	   	  		 </div>
+
+				 <div class="header-sect">
+				 	<div>
+   	   	  		 		<div>
+   	   	  		 			<ul class="list-unstyled">
+   	   	  		 				<li><h2>What is Community Service Project (CSP)?</h2></li>
+   	   	  		 				<li>
+   	   	  		 					<p>
+   	   	  		 					    At Developers In Vogue we believe in an educational or training system that is skewed towards a hands-on approach to solving real world problems. The aim is to make our developers-in-training solution oriented and for that matter build applications in that effect. Our Developers-in-Training will be paired to design websites for nonprofit organizations at the end of the coding boot camp.
+   	   	  		 					</p>
+   	   	  		 				</li>
+   	   	  		 			</ul>
+   	   	  		 		</div>
+   	   	  		 	</div>
+				 </div>
+
+   	   	  		 <div class="mid-sect">
+   	   	  		 	<div class="row">
+   	   	  		 		<div class="col-md-3">
+   	   	  		 			<ul class="list-unstyled">
+   	   	  		 				<li><h2><i class="fa fa-lightbulb-o fa-2x"></i></h2></li>
+   	   	  		 				<li><h3>Ideation</h3></li>
+   	   	  		 				<li>
+   	   	  		 					<p>
+   	   	  		 					   This is the first phase of the development proces where the problem at hand is
+   	   	  		 					   broken down to the barest minimum to get a better understanding. Ideas with regards to how
+   	   	  		 					   the problem is going to be solved are generated.
+   	   	  		 					</p>
+   	   	  		 				</li>
+   	   	  		 			</ul>
+   	   	  		 		</div>
+
+   	   	  		 		<div class="col-md-3">
+   	   	  		 			<ul class="list-unstyled">
+   	   	  		 				<li><h2><i class="fa fa-pencil fa-2x"></i></h2></li>
+   	   	  		 				<li><h3>Planning</h3></li>
+   	   	  		 				<li>
+   	   	  		 					<p>
+   	   	  		 					   A Roadmap for the execution of this project is drawn. It is generally a blueprint for the project that gives a detailed description of 
+   	   	  		 					   the project timelines and how each phase of the development process is going to be carried out. 
+   	   	  		 					</p>
+   	   	  		 				</li>
+   	   	  		 			</ul>
+   	   	  		 		</div>
+
+   	   	  		 		<div class="col-md-3">
+   	   	  		 			<ul class="list-unstyled">
+   	   	  		 				<li><h2><i class="fa fa-legal fa-2x"></i></h2></li>
+   	   	  		 				<li><h3>Implementation</h3></li>
+   	   	  		 				<li>
+   	   	  		 					<p>
+   	   	  		 					   This is the stage that hands get <b>dirty</b> and entangled in real work. This involves building the solution from scratch
+   	   	  		 					   i.e. putting the pulleys and the gears together. The services of <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b> and others will be employed.
+   	   	  		 					</p>
+   	   	  		 				</li>
+   	   	  		 			</ul>
+   	   	  		 		</div>
+
+   	   	  		 		<div class="col-md-3">
+   	   	  		 			<ul class="list-unstyled">
+   	   	  		 				<li><h2><i class="fa fa-cloud fa-2x"></i></h2></li>
+   	   	  		 				<li><h3>Deployment</h3></li>
+   	   	  		 				<li>
+   	   	  		 					<p>
+   	   	  		 					   The Final Solution [i.e Static Web Site ] will then be deployed using GitHub Pages.
+   	   	  		 					   The tools from GitHub Pages will be leveraged upon to push the final web solution onto
+   	   	  		 					   the World Wide Web. 
+   	   	  		 					</p>
+   	   	  		 				</li>
+   	   	  		 			</ul>
+   	   	  		 		</div>
+   	   	  		 	</div>
+   	   	  		 </div>
+   	   	  		 <div class="bottom-sect">
+   	   	  		 	<div>
+   	   	  		 		<div>
+   	   	  		 			<ul class="list-unstyled">
+   	   	  		 			    <li><i class="fa fa-github fa-3x"></i></li>
+   	   	  		 				<li><h4>Powered By GitHub Pages</h4></li>
+   	   	  		 			</ul>
+   	   	  		 		</div>
+   	   	  		 	</div>
+   	   	  		 </div>
+
+   	   	  		 <div class="footer">
+   	   	  		 	<ul class="list-inline">
+   	   	  		 	  <li><a href="https://www.facebook.com/devinvogue"><i class="fa fa-facebook fa-2x"></i></a></li>
+   	   	  		 	  <li><a href="https://www.twitter.com/devinvogue"><i class="fa fa-twitter fa-2x"></i></a></li>
+   	   	  		 	</ul>
+   	   	  		 </div>
+
+   	   	     </div>
+   	   	  </div>
+   	   </div>
+   </div>
 </body>
 </html>
