--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    	   	  	 <div class="inner-wrapper">
    	   	  		 <div class="top-sect">
    	   	  		 	<ul class="list-unstyled">
+   	   	  		 	    <li><img src="img/new_logo.svg"></li>
    	   	  		 	    <li><h1>Developers In Vogue</h1></li>
    	   	  		 	    <li><h4>#LetASisterKnow</li>
    	   	  		 		<li>
